--- a/games/Blackjack/views/result.phtml
+++ b/games/Blackjack/views/result.phtml
@@ -4,7 +4,7 @@
 
         <p>Write some shit about winners and losers.</p>
         
-        <form action="../game.php" method="post">
+        <form action="game.php" method="post">
             <p><input type="submit" name="play" value="New Game?"/></p>
         </form>
     </main>
