Renamed 'Dealer' class to Game to match filename Fixed the path to game controller in result.phtml Replaced the session 'stick' variable with $view->stick and set it to false at the beginning of a new game

--- a/games/Blackjack/views/game.phtml
+++ b/games/Blackjack/views/game.phtml
@@ -6,7 +6,7 @@
 <?php
     require_once './views/display.phtml';
     
-    if (!isset($_SESSION['stick'])){
+    if (!$view->stick){
        require_once './views/action.phtml';            
     }
     else{
