--- a/games/Blackjack/views/result.phtml
+++ b/games/Blackjack/views/result.phtml
@@ -2,17 +2,25 @@
     <main>    
         <h2>Game Over!</h2>
 
-        <p>Write some shit about winners and losers.</p>
-        
+        <?php
+        if ($view->playerScore < 22){
+            if($view->playerScore > $view->dealerScore
+                    || $view->dealerScore > 21){
+               echo "You Win!";}
+            elseif ($view->playerScore === $view->dealerScore){
+                echo "It's a Draw!";}
+            elseif ($view->dealerScore > $view->playerScore
+                    && $view->dealerScore < 22){
+                echo "Dealer wins!";}                   
+        } else{
+            if ($view->dealerScore < 22){
+                echo "Dealer wins!";}
+            else {echo "It's a Draw!";}
+        }
+        $_SESSION['stick'] = null;
+        ?>        
         <form action="game.php" method="post">
             <p><input type="submit" name="play" value="New Game?"/></p>
         </form>
-    </main>
-</html>    
-
-<?php
-// Score have been updated and stick set to true.
-// Now check p and d scores, and display accordingly.
-// SO check if each is bust and display
-// Then check who wins (draw is a push
-// STart adding scores to session/db?
+    </main>    
+</html>
